--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
    <body>
       <div class="bobby">
       <div class="languages__overlay"></div>
+      <div class="invest__overlay"></div>
       <!-- COOKIE PANEL -->
       <div id="cookie" class="cookie">
          <div class="container">
@@ -151,11 +152,25 @@
                      <li class="main-nav__item"><a class="main-nav__item-link goTo lang"
                         href="#roadmap" key="roadmap">Roadmap</a>
                      </li>
-                     <li class="main-nav__item"><a class="main-nav__item-link goTo lang" href="#our-team" key="ourteam">Our
-                        team</a>
+                     <li class="main-nav__item"><a class="main-nav__item-link goTo lang" href="#our-team" key="ourteam">Team</a>
                      </li>
-                     <li class="main-nav__item"><a class="main-nav__item-link lang" href="Presentation.pdf"
-                        target="_blank" key="pitch">Pitch Deck</a>
+                     <li class="main-nav__item">
+
+                     	<!-- <a class="main-nav__item-link lang" href="Presentation.pdf"
+                        target="_blank" key="pitch">Pitch Deck</a> -->
+
+                           <div class="invest__inner">
+                              <div class="invest__body">
+                                 <a>For Investors</a>
+                              </div>
+                              <div class="invest__popup">
+                                 <a href="/whitepaper.pdf">Whitepaper</a>
+                                 <a href="/Presentation.pdf">Pitch Deck</a>
+                                 <a href="/onepager.pdf">One Pager</a>
+                              </div>
+                           </div>
+
+
                      </li>
                   </ul>
                </div>
@@ -215,11 +230,11 @@
             <ul class="header-mobile__nav-menu">
             <li class="item"> <a class="link goTo lang" href="#about" key="about">About</a></li>
             <li class="item"> <a class="link goTo lang" href="#roadmap" key="roadmap">Roadmap</a> </li>
-            <li class="item"> <a class="link goTo lang" href="#our-team" key="ourteam">Our team</a></li>
+            <li class="item"> <a class="link goTo lang" href="#our-team" key="ourteam">Team</a></li>
             <li class="item"> <a class="link goTo lang" href="#demo" key="demo">Demo</a></li>
+            <li class="item"> <a target="_blank" class="link goTo lang" href="/onepager.pdf" key="">One Pager</a></li>
             <li class="item"> <a class="link goTo lang" href="Presentation.pdf" target="_blank" key="pitch">Pitch
-            Deck</a>
-            </li>
+            Deck</a></li>
             <li class="item item--btn">
             <a href="views/login.html" class="header-mobile__btn btn btn--simple">
             <img src="img/sprites/intermediate-svg/profile-yellow.svg" class="btn__icon"
