New submenu items

--- a/index.html
+++ b/index.html
@@ -164,9 +164,11 @@
                                  <a>For Investors</a>
                               </div>
                               <div class="invest__popup">
-                                 <a href="/whitepaper.pdf">Whitepaper</a>
-                                 <a href="/Presentation.pdf">Pitch Deck</a>
-                                 <a href="/onepager.pdf">One Pager</a>
+                                 <a target="_blank" href="/whitepaper.pdf">Whitepaper</a>
+                                 <a target="_blank" href="/Presentation.pdf">Pitch Deck</a>
+                                 <a target="_blank" href="/onepager.pdf">One Pager</a>
+                                 <a target="_blank" href="/legalopinion.pdf">Legal Opinion</a>
+                                 <a target="_blank" href="/audit.pdf">Audit</a>
                               </div>
                            </div>
 
