--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <h4 class="intro__undertitle lang" key="description">Discover Styles. Earn Crypto.</h4>
             </div>
 
-            <div class="countdown-container" id="countdown-container">
+            <div style="display:none" class="countdown-container" id="countdown-container">
             <p id="countdown-label" class="lang" key="ieoend">IEO ENDS</p>
             <div class="timer" id="countdown">
             <div class="timer-wrapper"><div class="time" id="days">00</div><span class="text" key=x>days</span></div><div class="timer-wrapper"><div class="time" id="hours">00</div><span class="text">hours</span></div><div class="timer-wrapper"><div class="time" id="minutes">00</div><span class="text" key="ms">min</span></div><div class="timer-wrapper"><div class="time" id="seconds">00</div><span class="text" key="ss">sec</span></div>
@@ -295,10 +295,10 @@
             </div>
             </div>
             <div class="intro__btn-wrap">
-            <a href="https://p2pb2b.io/token-sale/CUR8/2" id="p2p" class="intro__btn btn btn--p2p" target="_blank">
+            <!-- <a href="https://p2pb2b.io/token-sale/CUR8/2" id="p2p" class="intro__btn btn btn--p2p" target="_blank">
                <img src="img/main/header/p2pb2b.svg" class="btn__icon" alt="icon p2pb2b">
                <span class="lang" key="p2p">BUY ON P2PB2B (KYC)</span>
-               </a>
+               </a> -->
             <a id="airswap" class="intro__btn btn btn--airswap">
             <img src="img/main/header/airswap.svg" class="btn__icon" alt="icon airswap">
             <span class="lang" key="airswap">BUY CUR8 (NO KYC/FEES)</span>
@@ -1464,7 +1464,7 @@
       <script src="lang.js"></script> 
       <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
       <script src="js/langswitch.js"></script> 
-      <script src="https://cdn.airswap.io/gallery/airswap-trader.js" async></script>
+      <script src="https://cdn.airswap.io/airswap-instant-widget.js" async></script>
       <script src="plugins/moment.js/moment.min.js"></script>
       <script src="plugins/countdown/countdown-timer.min.js"></script>
       <script src="plugins/goalProgress/goalProgress.js"></script>
