--- a/index.html
+++ b/index.html
@@ -683,9 +683,6 @@
                               <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
                               <span class="lang" key="twentyqonetwo">Private-alpha launch of Curate platform open to telegram members</span>
                            </li>
-                           <li class="roadmap__item">
-                              <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
-                           </li>
                         </ul>
                      </div>
                      <div class="roadmap__block roadmap__block--next wow fadeInRight" data-wow-delay="1s">
@@ -802,7 +799,7 @@
                      <h2 class="our-team__title wow fadeInUp lang" key="ourteam">
                         Team
                      </h2>
-                     <div class="our-team__slider-wrap swiper-container wow fadeInUp" style="overflow-x:hidden!important;">
+                     <div class="our-team__slider-wrap swiper-container wow fadeInUp">
                         <div class="our-team__slider swiper-wrapper">
                            <div class="our-team__slider-block swiper-slide">
                               <div class="our-team__slider-avatar">
